# gwas2vcf

./: Dockerfile  gwas.py  main.py  param.py  pyproject.toml  vcf.py
.github/workflows/: docker-image.yml
dependencies/: vgraph-1.4.0-cp311-cp311-macosx_13_0_x86_64.whl
