[tool.poetry]
name = "gwas2vcf"
version = "0.1.0"
description = ""
authors = ["nicksunderland <nicholas.p.sunderland@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
marshmallow = "2.18.1"
biopython = "1.81"
numpy = "1.25.2"
Cython = "3.0.0"
pysam = "0.21.0"
pytest = "7.4.0"
vgraph = { path = "dependencies/vgraph-1.4.0-cp311-cp311-macosx_13_0_x86_64.whl" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
